--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ide.visualstudio": "2.0.5",
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.render-pipelines.high-definition": "10.2.2",
+    "com.unity.render-pipelines.high-definition-config": "file:../LocalPackages/com.unity.render-pipelines.high-definition-config",
     "com.unity.shadergraph": "10.2.2",
     "com.unity.test-framework": "1.1.19",
     "com.unity.textmeshpro": "3.0.1",
